--- a/daily-journal/styles/main.css
+++ b/daily-journal/styles/main.css
@@ -3,4 +3,9 @@
     flex-direction: column;
     background-color: red;
     width: 30%;
+    margin: auto;
+}
+
+body {
+    text-align: center;
 }
