--- a/exercises/quotebook/main.css
+++ b/exercises/quotebook/main.css
@@ -1,10 +1,16 @@
+html {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     background: whitesmoke;
-   padding-top: 0;
+   padding: 0;
+   margin: 0;
 }
 
 article {
-    width: 80%;
+    width: 90%;
     background-color: white;
     margin: 0 auto 0 auto;
     height: 100vh;
@@ -34,3 +40,4 @@ article {
     align-items: center;
     box-shadow: 0 0 20px black;
 }
+
